# x2l_sensor

./: CMakeLists.txt  README.md  reset_rp2040.sh  setup.sh  usb.sh  usb_boot.sh
src/: hello_world.c
